--- a/project.css
+++ b/project.css
@@ -16,7 +16,7 @@ nav {
 }
 
 table, th, td{
-	border : 1px solid black;
+	border : 1px solid blue;
 	font-size : 20px;
 	font-family : 'Tahoma', serif;
 }
